SVY-14428 Support count(distinct columnName) through the queryBuilder